--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "build": "webpack",
+    "lint": "eslint .",
     "start": "start-storybook -p 9001 -c .storybook -s dist/storybook/",
     "build:demo": "webpack --config ./docs/webpack.config.js",
     "release": "yarn build && yarn build:demo && yarn publish"
@@ -29,8 +30,11 @@
     "@types/react-dom": "^16.0.9",
     "@types/storybook__react": "^3.0.9",
     "@types/uuid": "^3.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "eslint": "^7.23.0",
     "iso-morphic-style-loader": "^2.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
