--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "react-awesome-toasts",
   "version": "0.0.9",
   "description": "Higly customisable React toast notifications with automanaged queue",
-  "author": "Dmitry Belyaev (https://bananabobby.github.io)",
+  "author": "Dmitry Belyaev (https://blvdmitry.github.io)",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BananaBobby/react-awesome-toasts.git"
+    "url": "https://github.com/blvdmitry/react-awesome-toasts.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,9 +16,9 @@
   "scripts": {
     "build": "webpack",
     "lint": "eslint .",
-    "start": "start-storybook -p 9001 -c .storybook -s dist/storybook/",
+    "start": "start-storybook -p 9001 -c .storybook -s stories/",
     "build:demo": "webpack --config ./docs/webpack.config.js",
-    "release": "yarn build && yarn build:demo && yarn publish"
+    "release": "npm run build && npm run build:demo && npm publish"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -39,7 +39,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "ts-loader": "^5.3.0",
-    "typescript": "^3.1.6",
+    "typescript": "^4.4.0",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2"
   },
