--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "eslint": "^7.23.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "iso-morphic-style-loader": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
