--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Higly customizable React toast notifications (fork of https://github.com/blvdmitry/react-awesome-toasts)",
   "contributors": [
     "Dmitry Belyaev (https://blvdmitry.github.io)",
-    "Jannik Wibker (https://jannikwibker.dev)"
+    "Janina Wibker (https://janina.lol)"
   ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JannikWibker/react-awesome-toasts.git"
+    "url": "https://github.com/JaninaWibker/react-awesome-toasts.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
